@@ -1,4 +1,6 @@
 name = Pod-Weaver-PluginBundle-MARCEL
 copyright_year = 2010
+author = Marcel Gruenauer <marcel@cpan.org>
+author = Nigel Metheringham <nigel.metheringham@cpan.com>
 
 [@MARCEL]
